[GEF] Fix Java deprecations